[gd_scene load_steps=4 format=3 uid="uid://bww8dyybc6lk7"]

[ext_resource type="Script" uid="uid://cs6kukqsblxa4" path="res://Scenes/InstructionsScreen/instructions_screen.gd" id="1_gyij5"]
[ext_resource type="Script" uid="uid://de706yc1x0tdn" path="res://Scenes/ClickableRichTextLabel/clickable_rich_text_label.gd" id="2_46hdx"]
[ext_resource type="PackedScene" uid="uid://cambpmv5v3opa" path="res://Scenes/EnhancedButton/enhanced_button.tscn" id="3_u8wyn"]

[node name="InstructionsScreen" type="Node"]
script = ExtResource("1_gyij5")

[node name="InstructionsLabel" type="RichTextLabel" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/normal_font_size = 32
bbcode_enabled = true
horizontal_alignment = 1
script = ExtResource("2_46hdx")
metadata/_custom_type_script = "uid://de706yc1x0tdn"

[node name="EnhancedButton" parent="." instance=ExtResource("3_u8wyn")]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -200.0
offset_top = -144.0
offset_right = 200.0
offset_bottom = -44.0
grow_horizontal = 2
grow_vertical = 0
text = "Back"

[connection signal="pressed" from="EnhancedButton" to="." method="_on_back_button_pressed"]
